# pneuma-db

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-relay.txt  setup.sh
.github/workflows/: ci.yml  publish.yml
pneuma_db/: __init__.py  cli.py  crypto.py  db.py  error_correction.py  framing.py  node.py  relay_client.py  relay_server.py  server.py  transport.py
pneuma_mesh/: discovery.py  mesh_node.py  run.py  tdma.py  tui.py
pneuma_sql/: __init__.py  sql_engine.py
tests/: test_all.py  test_mesh.py  test_sql.py
